# syllabification

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  main.cpp
include/: split.h
lib/ioutil/: ioutil.h
lib/syllables_divider/: CMakeLists.txt  syllables_divider.cpp  syllables_divider.h
src/: split.cpp
tests/: test_syllables_divider.cpp  test_word_syll_split.cpp
